src/test/ui/imports/rfc-1560-warning-cycle.stderr
error: `Foo` is ambiguous
  --> $DIR/rfc-1560-warning-cycle.rs:21:17
   |
19 |         use *;
   |             - `Foo` could refer to the name imported here
20 |         use bar::*;
   |             ------ `Foo` could also refer to the name imported here
21 |         fn f(_: Foo) {}
   |                 ^^^
   |
   = note: #[deny(legacy_imports)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #38260 <https://github.com/rust-lang/rust/issues/38260>

error: aborting due to previous error

